# rcc

./: .gitignore  Cargo.toml  rust-toolchain.toml  rustc-ice-2026-04-02T19_11_50-32620.txt  rustfmt.toml  test.c  test2.c  test_compiler.ps1
compiler/AST/: Cargo.toml
compiler/IR/: Cargo.toml
compiler/IR/src/: builder.rs  constant.rs  context.rs  emitable.rs  emitter.rs  global.rs  instruction.rs  lib.rs  module.rs  types.rs  value.rs
compiler/Parse/: Cargo.toml
compiler/Sema/: Cargo.toml
compiler/Sema/src/: conversion.rs  declaration.rs  declref.rs  expression.rs  folding.rs  initialization.rs  lib.rs  semantics.rs  statement.rs
compiler/Shared/: Cargo.toml
compiler/Shared/src/: arena.rs  constant.rs  diagnosis.rs  keyword.rs  operator.rs  source_info.rs  token.rs
compiler/src/: main.rs
core/: Cargo.toml
core/src/: analyzer.rs  blueprints.rs  codegen.rs  common.rs  diagnosis.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  sema.rs  session.rs  storage.rs  types.rs
core/src/analyzer/: analyzer.rs  conversion.rs  declaration.rs  dump.rs  expression.rs  folding.rs  statement.rs  testing.rs
core/src/blueprints/: rawdecl.rs  rawexpr.rs  rawstmt.rs
core/src/codegen/: desugar.rs  instruction.rs  module.rs
core/src/common/: dumper.rs  environment.rs  error.rs  floating.rs  integral.rs  keyword.rs  operator.rs  rawexpr.rs  rawstmt.rs  source_info.rs  storage.rs  token.rs  warning.rs
core/src/diagnosis/: data.rs  error.rs  warning.rs
core/src/ir/: builder.rs  context.rs  dump.rs  emitable.rs  emitter.rs  fmt.rs  instruction.rs  module.rs  types.rs  value.rs
core/src/lexer/: lexer.rs
core/src/parse/: declaration.rs  expression.rs  parser.rs  statement.rs  testing.rs
core/src/parser/: declaration.rs  expression.rs  parser.rs  statement.rs  testing.rs
core/src/sema/: analyzer.rs  conversion.rs  declaration.rs  dump.rs  expression.rs  folding.rs  semantics.rs  statement.rs  testing.rs
core/src/types/: cast_type.rs  compatible.rs  constant.rs  context.rs  dump.rs  dumpable.rs  fmt.rs  meta.rs  primitives.rs  promotion.rs  qualified_types.rs  type_info.rs  types.rs
src/: lib.rs  main.rs
src/analyzer/: analyzer.rs  conversion.rs  declaration.rs  expression.rs  mod.rs
src/common/: environment.rs  keyword.rs  mod.rs  operator.rs  rawdecl.rs  (+5 more)
tests/: initialization.c  test.c  test3.c  test4.c
utils/: Cargo.toml
(+58 files in other folders)
