[package]
name = "rc-core"
version = "0.1.0"
edition = "2024"
authors = ["LiAuTraver"]
license-file = "LICENSE"
homepage = "https://github.com/LiAuTraver/rc"
readme = "README.md"


[dependencies]
once_cell = "1.21.3"
# keep it 0.25; would cause serialization issue w.r.t. `}` on later versions
strum_macros = "0.25.3"
strum = "0.27.2"
bitflags = "2.10.0"
paste = "1.0.15"
thiserror = "2.0.18"

rc-utils = { path = "../utils" }

[lints.clippy]
needless_pass_by_ref_mut = "warn"
module_inception = "allow"
