[package]
name = "rcc-core"
version = "0.1.0"
edition = "2024"
authors = ["LiAuTraver"]
license-file = "LICENSE"
homepage = "https://github.com/LiAuTraver/rcc"
readme = "README.md"


[dependencies]
rcc-utils = { path = "../utils" }

# keep it 0.25; would cause serialization issue w.r.t. `}` on later versions
strum_macros = "0.25.3"
strum = "0.27.2"
bitflags = "2.10.0"
paste = "1.0.15"
thiserror = "2.0.18"
termcolor = "1.4.1"
bumpalo = { version = "3.19.1", features = ["collections"] }
slotmap = "1.1.1"
bimap = "0.6.3"

[lints.clippy]
needless_pass_by_ref_mut = "warn"
module_inception = "allow"
