[package]
name = "rcc-ir"
version = "0.1.0"
edition = "2024"
authors = ["LiAuTraver"]


[dependencies]
rcc-utils = { path = "../../utils" }
rcc-shared = { path = "../Shared" }
rcc-adt = { path = "../ADT" }
rcc-ast = { path = "../AST" }
rcc-sema = { path = "../Sema" }

slotmap = "1.1.1"
bimap = "0.6.3"
strum_macros = "0.25.3"
strum = "0.27.2"
