[package]
name = "rcc-sema"
version = "0.1.0"
edition = "2024"
authors = ["LiAuTraver"]


[dependencies]
rcc-utils = { path = "../../utils" }
rcc-shared = { path = "../Shared" }
rcc-adt = { path = "../ADT" }
rcc-ast = { path = "../AST" }
rcc-parse = { path = "../Parse" }

strum_macros = "0.25.3"
strum = "0.27.2"
