[package]
name = "rcc-shared"
version = "0.1.0"
edition = "2024"
authors = ["LiAuTraver"]


[dependencies]
rcc-utils = { path = "../../utils" }
rcc-adt = { path = "../ADT" }

# keep it 0.25; would cause serialization issue w.r.t. `}` on later versions
strum_macros = "0.25.3"
strum = "0.27.2"
thiserror = "2.0.18"
bumpalo = { version = "3.19.1", features = ["collections"] }
